# claude-board

./: .dockerignore  .gitignore  .mcp.json  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app.json  apps.json  claude-runner.js  data.db  db.js  docker-compose.yml  eslint.config.js  package-lock.json  package.json  server.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
client/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
docs/: CNAME  docs.json  index.html  installation.mdx  introduction.mdx  quickstart.mdx
docs-site/: docs.json  introduction.mdx
src/: app.js
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: mcp-server.js
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  migration.rs  setup.rs
src-tauri/src/claude/: events.rs  mod.rs  prompt.rs  runner.rs  state_machine.rs
src-tauri/src/commands/: attachments.rs  auth.rs  chat.rs  claude_manager.rs  github.rs  gsd.rs  logs.rs  mod.rs  planning.rs  projects.rs  roadmap.rs  roles.rs  settings.rs  snippets.rs  stats.rs  tasks.rs  templates.rs  webhooks.rs  workflows.rs
src-tauri/src/db/: activity.rs  attachments.rs  auth.rs  dependencies.rs  mod.rs  projects.rs  roadmap.rs  roles.rs  scans.rs  schema.rs  settings.rs  snippets.rs  stats.rs  tasks.rs  templates.rs  webhooks.rs  workflows.rs
src-tauri/src/services/: github.rs  github_sync.rs  gsd.rs  http_api.rs  mod.rs  notification.rs  queue.rs  scanner.rs  webhook.rs
(+344 files in other folders)
