[package]
name = "claude-board"
version = "1.5.11"
description = "Visual task management board for Claude Code"
authors = ["Bahri Hirfanoglu <bahri@hirfanoglu.com>"]
edition = "2021"

[lib]
name = "claude_board_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "webview-data-url"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
regex-lite = "0.1"
urlencoding = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"
